adds avoid scroll on map, 3 pics, starts building mobile menu

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
           <div class='nav-logo'>
             <img alt='' src='img/kickarts-logo-new-icon.png'>
           </div>
-          <div class='nav-title'><span style='font-weight: 400'>Kick</span>Arts<span style='font-weight: 400'>.org.nz</span></div>
+          <div class='nav-title'><span style='font-weight: 400'>KICK</span>ARTS<span style='font-weight: 400'>.org.nz</span></div>
         </h1>
       </a>
+      <span class='menu-button menu-open'></span>
       <ul>
         <li>
           <a class='menu-link' href='#latest-show'>
@@ -61,7 +62,7 @@
             Auckland's Comprehensive ArtShow.
           </p>
           <p class='details'>
-            Every Sunday 8.35 | 104.6 FM
+            Every Sunday 8.35pm | 104.6 FM
           </p>
         </div>
       </h1>
@@ -69,7 +70,7 @@
         <div class='box-col-3'>
           <div class='card-title emerald'>
             <h3>
-              Live Shows
+              Live Show
             </h3>
             <div class='card-icon'>
               <div class='fa fa-bolt'></div>
@@ -216,7 +217,7 @@
       </div>
     </div>
     <div id='contact'>
-      <div class='box-2'>
+      <div class='box-2 contact-box'>
         <div class='box-col-2'>
           <div class='card-title alizarin'>
             <h3>
