finishes mobile menu

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class='box-col-3'>
           <div class='card-title blue'>
             <h3>
-              Weekly Stream
+              Stream
             </h3>
             <div class='card-icon'>
               <div class='fa fa-rss'></div>
