adds nav links to team and contacts

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
           </a>
         </li>
         <li>
-          <a class='menu-link' href='#'>
+          <a class='menu-link' href='#our-team'>
             Our Team
           </a>
         </li>
         <li>
-          <a class='menu-link' href='#'>
+          <a class='menu-link' href='#contact'>
             Contact us
           </a>
         </li>
