--- a/index.html
+++ b/index.html
@@ -13,47 +13,49 @@
     <script src='js/min/app-min.js'></script>
   </head>
   <body>
-    <div class='top-bar'>
-      &nbsp;
+    <div class='menu'>
+      <div class='top-bar is-hidden'>
+        &nbsp;
+      </div>
+      <nav class='is-hidden'>
+        <a href='#header'>
+          <h1>
+            <div class='nav-logo'>
+              <img alt='' src='img/kickarts-logo-new-icon.png'>
+            </div>
+            <div class='nav-title'><span style='font-weight: 400'>KICK</span>ARTS<span style='font-weight: 400'>.org.nz</span></div>
+          </h1>
+        </a>
+        <span class='menu-button menu-open'></span>
+        <ul>
+          <li>
+            <a class='menu-link' href='#latest-show'>
+              Latest shows
+            </a>
+          </li>
+          <li>
+            <a class='menu-link' href='#our-team'>
+              Our Team
+            </a>
+          </li>
+          <li>
+            <a class='menu-link' href='#contact'>
+              Contact us
+            </a>
+          </li>
+          <li>
+            <a class='menu-link' href='#'>
+              Archive
+            </a>
+          </li>
+          <li>
+            <a class='menu-link' href='#'>
+              <div class='fa fa-search'></div>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <nav>
-      <a href='#header'>
-        <h1>
-          <div class='nav-logo'>
-            <img alt='' src='img/kickarts-logo-new-icon.png'>
-          </div>
-          <div class='nav-title'><span style='font-weight: 400'>KICK</span>ARTS<span style='font-weight: 400'>.org.nz</span></div>
-        </h1>
-      </a>
-      <span class='menu-button menu-open'></span>
-      <ul>
-        <li>
-          <a class='menu-link' href='#latest-show'>
-            Latest shows
-          </a>
-        </li>
-        <li>
-          <a class='menu-link' href='#our-team'>
-            Our Team
-          </a>
-        </li>
-        <li>
-          <a class='menu-link' href='#contact'>
-            Contact us
-          </a>
-        </li>
-        <li>
-          <a class='menu-link' href='#'>
-            Archive
-          </a>
-        </li>
-        <li>
-          <a class='menu-link' href='#'>
-            <div class='fa fa-search'></div>
-          </a>
-        </li>
-      </ul>
-    </nav>
     <header id='header'>
       <h1 class='logo'>
         <img alt='' src='img/kickarts-logo-new-icon.png'>
