--- a/index.html
+++ b/index.html
@@ -13,49 +13,47 @@
     <script src='js/min/app-min.js'></script>
   </head>
   <body>
-    <div class='menu'>
-      <div class='top-bar is-hidden'>
-        &nbsp;
-      </div>
-      <nav class='is-hidden'>
-        <a href='#header'>
-          <h1>
-            <div class='nav-logo'>
-              <img alt='' src='img/kickarts-logo-new-icon.png'>
-            </div>
-            <div class='nav-title'><span style='font-weight: 400'>KICK</span>ARTS<span style='font-weight: 400'>.org.nz</span></div>
-          </h1>
-        </a>
-        <span class='menu-button menu-open'></span>
-        <ul>
-          <li>
-            <a class='menu-link' href='#latest-show'>
-              Latest shows
-            </a>
-          </li>
-          <li>
-            <a class='menu-link' href='#our-team'>
-              Our Team
-            </a>
-          </li>
-          <li>
-            <a class='menu-link' href='#contact'>
-              Contact us
-            </a>
-          </li>
-          <li>
-            <a class='menu-link' href='#'>
-              Archive
-            </a>
-          </li>
-          <li>
-            <a class='menu-link' href='#'>
-              <div class='fa fa-search'></div>
-            </a>
-          </li>
-        </ul>
-      </nav>
+    <div class='top-bar is-hidden'>
+      &nbsp;
     </div>
+    <nav class='is-hidden'>
+      <a href='#header'>
+        <h1>
+          <div class='nav-logo'>
+            <img alt='' src='img/kickarts-logo-new-icon.png'>
+          </div>
+          <div class='nav-title'><span style='font-weight: 400'>KICK</span>ARTS<span style='font-weight: 400'>.org.nz</span></div>
+        </h1>
+      </a>
+      <span class='menu-button menu-open'></span>
+      <ul>
+        <li>
+          <a class='menu-link' href='#latest-show'>
+            Latest shows
+          </a>
+        </li>
+        <li>
+          <a class='menu-link' href='#our-team'>
+            Our Team
+          </a>
+        </li>
+        <li>
+          <a class='menu-link' href='#contact'>
+            Contact us
+          </a>
+        </li>
+        <li>
+          <a class='menu-link' href='#'>
+            Archive
+          </a>
+        </li>
+        <li>
+          <a class='menu-link' href='#'>
+            <div class='fa fa-search'></div>
+          </a>
+        </li>
+      </ul>
+    </nav>
     <header id='header'>
       <h1 class='logo'>
         <img alt='' src='img/kickarts-logo-new-icon.png'>
@@ -68,7 +66,7 @@
           </p>
         </div>
       </h1>
-      <div class='box'>
+      <div class='box box-padding-5'>
         <div class='box-col-3'>
           <div class='card-title emerald'>
             <h3>
@@ -120,7 +118,7 @@
       </div>
     </header>
     <div id='our-team'>
-      <div class='box-2'>
+      <div class='box box-padding-5'>
         <div class='box-col-2'>
           <div class='card-title green-sea'>
             <h3>
@@ -219,7 +217,7 @@
       </div>
     </div>
     <div id='contact'>
-      <div class='box-2 contact-box'>
+      <div class='box contact-box box-padding-5'>
         <div class='box-col-2'>
           <div class='card-title alizarin'>
             <h3>
@@ -303,58 +301,85 @@
     </div>
     <div id='latest-show'></div>
     <recent-shows></recent-shows>
-    <div class='box-2'>
-      <div class='box-col-2'>
-        <div class='card-title green-sea'>
-          <h3>
-            Our team
-          </h3>
-          <div class='card-icon'>
-            <div class='fa fa-users'></div>
+    <footer>
+      <div class='box'>
+        <div class='box-col-2'>
+          <div class='card-title green-sea'>
+            <h3>
+              Our team
+            </h3>
+            <div class='card-icon'>
+              <div class='fa fa-users'></div>
+            </div>
+          </div>
+          <div class='card-body box-height'>
+            <p>
+              Find out who is behind the microphone, their background, story and juicy gossip... you wish.
+            </p>
+          </div>
+          <div class='card-action'>
+            <a href='#'>More info</a>
           </div>
         </div>
-        <div class='card-body box-height'>
-          <p>
-            Find out who is behind the microphone, their background, story and juicy gossip... you wish.
-          </p>
-        </div>
-        <div class='card-action'>
-          <a href='#'>More info</a>
-        </div>
-      </div>
-      <div class='box-col-2'>
-        <div class='card-title alizarin'>
-          <h3>
-            Contact us
-          </h3>
-          <div class='card-icon'>
-            <div class='fa fa-map-marker'></div>
+        <div class='box-col-2'>
+          <div class='card-title alizarin'>
+            <h3>
+              Contact us
+            </h3>
+            <div class='card-icon'>
+              <div class='fa fa-map-marker'></div>
+            </div>
+          </div>
+          <div class='card-body box-height'>
+            <p>
+              All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
+            </p>
+          </div>
+          <div class='card-action'>
+            <ul>
+              <li>
+                <a href='#'>More info</a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-facebook'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-twitter'></div>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class='card-body box-height'>
-          <p>
-            All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
-          </p>
-        </div>
-        <div class='card-action'>
-          <ul>
-            <li>
-              <a href='#'>More info</a>
-            </li>
-            <li>
-              <a href='#'>
-                <div class='fa fa-facebook'></div>
-              </a>
-            </li>
-            <li>
-              <a href='#'>
-                <div class='fa fa-twitter'></div>
-              </a>
-            </li>
-          </ul>
-        </div>
       </div>
-    </div>
+      <div class='copyright'>
+        <p>
+          &copy; KickArts, 2014-2015
+        </p>
+        <p>
+          Site by <a href="www.webkea.co.nz">WEBKEA</a>
+        </p>
+        <ul class='footer-social'>
+          <li>
+            <a href='#'>
+              <div class='fa fa-envelope-o'></div>
+            </a>
+          </li>
+          <li>
+            <a href='#'>
+              <div class='fa fa-facebook'></div>
+            </a>
+          </li>
+          <li>
+            <a href='#'>
+              <div class='fa fa-twitter'></div>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
   <script src='raw.tag' type='riot/tag'></script>
   <script src='recent-shows.tag' type='riot/tag'></script>
