--- a/index.html
+++ b/index.html
@@ -217,6 +217,197 @@
           </div>
         </div>
       </div>
+      <div class='box box-padding-2'>
+        <div class='box-col-2'>
+          <div class='card-title green-sea'>
+            <h3>
+              Paula Crimmens
+            </h3>
+            <p class='team-description'>Books &amp; Theatre Reviewer</p>
+            <div class='card-img'>
+              <img alt='' src='img/paula.jpg'>
+            </div>
+          </div>
+          <div class='card-body box-height'>
+            <p>
+              After a successful career as an actor and director in London, Paula retrained as a drama therapist and in 2006 set up Interacting theatre which aims to maximise the potential of disabled people through active participation in theatre.
+            </p>
+            <p>
+              Interacting hosts the annual Disability Arts festival Interact! and runs drama and film making classes throughout Auckland for people with a disability.
+            </p>
+            <p>
+              She is the author of two drama therapy books and numerous short plays.
+            </p>
+          </div>
+          <div class='card-action'>
+            <ul>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-envelope-o'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-globe'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-linkedin'></div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class='box-col-2'>
+          <div class='card-title green-sea'>
+            <h3>
+              Carolynn Day
+            </h3>
+            <p class='team-description'>Theatre Reviewer</p>
+            <div class='card-img'>
+              <img alt='' src='img/carolynn.jpg'>
+            </div>
+          </div>
+          <div class='card-body box-height'>
+            <p>
+              Carolynn was imported from the UK a dozen years ago and has grown here like a weed ever since. She has no background in The Arts whatsoever, clearly making her the ideal choice as a reviewer for this show.
+            </p>
+            <p>
+              Worse than that, she’s one of those people who prefers craft to creativity, and thinks writers, directors, sound & lighting crew, event organisers, designers and administrators should get far more credit than they currently do.
+            </p>
+            <p>
+              When she’s not doing something in a dimly lit room for KickArts she’s either trying to organise the heck out of something, or watching a Scandinavian detective show with her partner and her cat.
+            </p>
+          </div>
+          <div class='card-action'>
+            <ul>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-envelope-o'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-globe'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-linkedin'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-twitter'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-instagram'></div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class='box box-padding-2'>
+        <div class='box-col-2'>
+          <div class='card-title green-sea'>
+            <h3>
+              Adam Fresco
+            </h3>
+            <p class='team-description'>Movies &amp; Theatre Reviewer</p>
+            <div class='card-img'>
+              <img alt='' src='img/adam.jpg'>
+            </div>
+          </div>
+          <div class='card-body box-height'>
+            <p>
+              Born in London, Adam wrote for, produced, directed and trained actors in British Theatre before working for ITV Television, where he ran the renowned ITV Television Workshop, producing, writing and directing everything from documentaries to children’s shows.
+            </p>
+            <p>
+              Now a New Zealand citizen, Adam was Director of South Seas Film & Television School, before establishing his own production company, DramaTrain, and completing a Masters in Creative Writing, at Auckland University.
+            </p>
+            <p>
+              In 2014, Adam joined new Auckland-based Imagine Studios NZ / Studio 08 as Producer, Director and Cat Juggler for television and live theatre production. Adam wishes to be cremated… but only once he’s dead.
+            </p>
+            <p class='small-text'>
+              Picture <a href="http://www.bbc.co.uk/arts/yourpaintings/paintings/adam-fresco-57256" target="_blank">source</a>: Adam Fresco painted by British artist, MAX HAGUE (1996, Oil on Canvas, from the Berwick Museum & Art Gallery collection)
+            </p>
+          </div>
+          <div class='card-action'>
+            <ul>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-envelope-o'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-globe'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-linkedin'></div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class='box-col-2'>
+          <div class='card-title green-sea'>
+            <h3>
+              Catherine George
+            </h3>
+            <p class='team-description'>Theatre Reviewer</p>
+            <div class='card-img'>
+              <img alt='' src='img/catherine.jpg'>
+            </div>
+          </div>
+          <div class='card-body box-height'>
+            <p>
+              Catherine has had a long involvement with the arts, starting with entertaining her nanny’s Meals on Wheels recipients with her rendition of Tom Jones “What’s New Pussycat” aged 4. This highlight was soon trumped by performing in Joseph and his Amazing Technicolour Dreamcoat alongside a very young Rob Guest.
+            </p>
+            <p>
+              Passionate about all things arts, but particularly children’s and youth theatre and the development of emerging artists, Catherine is on the Board of the National Youth Theatre Company and Auckland Fringe Trust. Catherine’s day job is as a Senior Advisor at the ASB Community Trust, where she has worked for several years.
+            </p>
+            <p>
+              When not going to theatre, talking about theatre or working behind the scenes in a variety of guises, she spends her spare time art journaling and singing along to Taylor Swift and Biffy Clyro in the car with her long suffering partner and 3 teenage sons.
+            </p>
+          </div>
+          <div class='card-action'>
+            <ul>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-envelope-o'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-globe'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-linkedin'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-twitter'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-instagram'></div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
     <div id='contact'>
       <div class='box contact-box box-padding-5'>
