adds links to icons

--- a/index.html
+++ b/index.html
@@ -148,18 +148,13 @@
           <div class='card-action'>
             <ul>
               <li>
-                <a href='#'>
+                <a href='mailto:kickarts@gmail.com'>
                   <div class='fa fa-envelope-o'></div>
                 </a>
               </li>
               <li>
-                <a href='#'>
+                <a href='http://ugly.org.nz/' target='_blank'>
                   <div class='fa fa-globe'></div>
-                </a>
-              </li>
-              <li>
-                <a href='#'>
-                  <div class='fa fa-linkedin'></div>
                 </a>
               </li>
             </ul>
@@ -189,27 +184,27 @@
           <div class='card-action'>
             <ul>
               <li>
-                <a href='#'>
+                <a href='mailto:enny@webkea.co.nz'>
                   <div class='fa fa-envelope-o'></div>
                 </a>
               </li>
               <li>
-                <a href='#'>
+                <a href='http://ennybenzonelli.com/' target='_blank'>
                   <div class='fa fa-globe'></div>
                 </a>
               </li>
               <li>
-                <a href='#'>
+                <a href='https://nz.linkedin.com/pub/enny-benzonelli/2b/328/179' target='_blank'>
                   <div class='fa fa-linkedin'></div>
                 </a>
               </li>
               <li>
-                <a href='#'>
+                <a href='https://twitter.com/Enny_NZ' target='_blank'>
                   <div class='fa fa-twitter'></div>
                 </a>
               </li>
               <li>
-                <a href='#'>
+                <a href='https://instagram.com/ennynz/' target='_blank'>
                   <div class='fa fa-instagram'></div>
                 </a>
               </li>
@@ -242,18 +237,13 @@
           <div class='card-action'>
             <ul>
               <li>
-                <a href='#'>
-                  <div class='fa fa-envelope-o'></div>
-                </a>
-              </li>
-              <li>
-                <a href='#'>
+                <a href='http://interacting.org.nz/interactingtheatre/' target='_blank'>
                   <div class='fa fa-globe'></div>
                 </a>
               </li>
               <li>
-                <a href='#'>
-                  <div class='fa fa-linkedin'></div>
+                <a href='https://twitter.com/crimmens_paula' target='_blank'>
+                  <div class='fa fa-twitter'></div>
                 </a>
               </li>
             </ul>
@@ -283,28 +273,8 @@
           <div class='card-action'>
             <ul>
               <li>
-                <a href='#'>
-                  <div class='fa fa-envelope-o'></div>
-                </a>
-              </li>
-              <li>
-                <a href='#'>
-                  <div class='fa fa-globe'></div>
-                </a>
-              </li>
-              <li>
-                <a href='#'>
+                <a href='https://nz.linkedin.com/pub/carolynn-day/17/5a4/5b8' target='_blank'>
                   <div class='fa fa-linkedin'></div>
-                </a>
-              </li>
-              <li>
-                <a href='#'>
-                  <div class='fa fa-twitter'></div>
-                </a>
-              </li>
-              <li>
-                <a href='#'>
-                  <div class='fa fa-instagram'></div>
                 </a>
               </li>
             </ul>
@@ -339,17 +309,12 @@
           <div class='card-action'>
             <ul>
               <li>
-                <a href='#'>
-                  <div class='fa fa-envelope-o'></div>
-                </a>
-              </li>
-              <li>
-                <a href='#'>
+                <a href='http://www.flicks.co.nz/member/Adam-Fresco/' target='_blank'>
                   <div class='fa fa-globe'></div>
                 </a>
               </li>
               <li>
-                <a href='#'>
+                <a href='https://nz.linkedin.com/pub/adam-fresco/a/7b6/80a' target='_blank'>
                   <div class='fa fa-linkedin'></div>
                 </a>
               </li>
@@ -380,28 +345,18 @@
           <div class='card-action'>
             <ul>
               <li>
-                <a href='#'>
-                  <div class='fa fa-envelope-o'></div>
-                </a>
-              </li>
-              <li>
-                <a href='#'>
+                <a href='http://www.foundationnorth.org.nz/' target='_blank'>
                   <div class='fa fa-globe'></div>
                 </a>
               </li>
               <li>
-                <a href='#'>
+                <a href='https://nz.linkedin.com/pub/catherine-george/21/387/13' target='_blank'>
                   <div class='fa fa-linkedin'></div>
                 </a>
               </li>
               <li>
-                <a href='#'>
+                <a href='https://twitter.com/catherinegangel' target='_blank'>
                   <div class='fa fa-twitter'></div>
-                </a>
-              </li>
-              <li>
-                <a href='#'>
-                  <div class='fa fa-instagram'></div>
                 </a>
               </li>
             </ul>
@@ -434,12 +389,12 @@
           <div class='card-action'>
             <ul>
               <li>
-                <a href='#'>
+                <a href='mailto:kickarts1@gmail.com'>
                   <div class='fa fa-envelope-o'></div>
                 </a>
               </li>
               <li>
-                <a href='#'>
+                <a href='https://www.facebook.com/KickArts?_rdr=p' target='_blank'>
                   <div class='fa fa-facebook'></div>
                 </a>
               </li>
@@ -478,12 +433,12 @@
           <div class='card-action'>
             <ul>
               <li>
-                <a href='#'>
+                <a href='http://www.planetaudio.org.nz/contact' target='_blank'>
                   <div class='fa fa-globe'></div>
                 </a>
               </li>
               <li>
-                <a href='#'>
+                <a href='https://www.google.co.nz/maps/dir//Planet+FM,+79+Carrington+Rd,+Point+Chevalier,+Auckland+1246/@-36.874638,174.709828,17z/data=!4m13!1m4!3m3!1s0x6d0d4721e8ba396b:0x68173e75b3d6c62!2sPlanet+FM!3b1!4m7!1m0!1m5!1m1!1s0x6d0d4721e8ba396b:0x68173e75b3d6c62!2m2!1d174.709828!2d-36.874638' target='_blank'>
                   <div class='fa fa-location-arrow'></div>
                 </a>
               </li>
@@ -511,7 +466,7 @@
             </p>
           </div>
           <div class='card-action'>
-            <a href='#'>More info</a>
+            <a href='#out-team'>More info</a>
           </div>
         </div>
         <div class='box-col-2'>
@@ -531,15 +486,20 @@
           <div class='card-action'>
             <ul>
               <li>
-                <a href='#'>More info</a>
+                <a href='#contact'>More info</a>
               </li>
               <li>
-                <a href='#'>
+                <a href='mailto:kickarts1@gmail.com'>
+                  <div class='fa fa-envelope-o'></div>
+                </a>
+              </li>
+              <li>
+                <a href='https://www.facebook.com/KickArts?_rdr=p' target='_blank'>
                   <div class='fa fa-facebook'></div>
                 </a>
               </li>
               <li>
-                <a href='#'>
+                <a href='https://twitter.com/KickArtsRadio' target='_blank'>
                   <div class='fa fa-twitter'></div>
                 </a>
               </li>
@@ -556,17 +516,17 @@
         </p>
         <ul class='footer-social'>
           <li>
-            <a href='#'>
+            <a href='mailto:kickarts1@gmail.com'>
               <div class='fa fa-envelope-o'></div>
             </a>
           </li>
           <li>
-            <a href='#'>
+            <a href='https://www.facebook.com/KickArts?_rdr=p' target='_blank'>
               <div class='fa fa-facebook'></div>
             </a>
           </li>
           <li>
-            <a href='#'>
+            <a href='https://twitter.com/KickArtsRadio' target='_blank'>
               <div class='fa fa-twitter'></div>
             </a>
           </li>
