adds home button in nnav

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         <span class='menu-button menu-open'></span>
         <ul>
           <li>
+            <a class='menu-link' href='#'>
+              <div class='fa fa-home'></div>
+            </a>
+          </li>
+          <li>
             <a class='menu-link' href='#latest-show'>
               Latest shows
             </a>
