fixes cover bg for mobile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <title>KickArts | Auckland's Comprehensive ArtShow</title>
     <link href='css/reset.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
@@ -13,6 +14,7 @@
     <script src='js/min/app-min.js'></script>
   </head>
   <body>
+    <img alt='' class='bg' src='img/skytower-small.jpg'>
     <div class='top-bar is-hidden'>
       &nbsp;
     </div>
