adds uncycle to space boxes evenly on mobile view

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
     <div id='latest-show'></div>
     <recent-shows></recent-shows>
     <footer>
-      <div class='box'>
+      <div class='box box-padding-5'>
         <div class='box-col-2'>
           <div class='card-title green-sea'>
             <h3>
