--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </li>
             <li>
               <a class='menu-link episodes-link' href='#latest-show'>
-                Latest shows
+                Episodes
               </a>
             </li>
             <li>
@@ -49,11 +49,6 @@
             <li>
               <a class='menu-link contact-link' href='#contact'>
                 Contact us
-              </a>
-            </li>
-            <li>
-              <a class='menu-link' href='#'>
-                Archive
               </a>
             </li>
             <li>
