creates search box

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class='box-col-3'>
             <div class='card-title purple'>
               <h3>
-                Archive
+                Episodes
               </h3>
               <div class='card-icon'>
                 <div class='fa fa-archive'></div>
@@ -117,7 +117,7 @@
               <p>If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.</p>
             </div>
             <div class='card-action'>
-              <a href='#'>Browse archive</a>
+              <a href='#'>Browse episodes</a>
             </div>
           </div>
         </div>
@@ -364,6 +364,158 @@
                   </a>
                 </li>
               </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id='search-section'>
+        <div class='box box-padding-5'>
+          <div class='card-title purple'>
+            <h3>
+              Search
+            </h3>
+            <div class='card-icon'>
+              <div class='fa fa-search'></div>
+            </div>
+          </div>
+          <div class='card-body'>
+            <div class='box-col-3-no-bg box-height'>
+              <h2>
+                Year
+              </h2>
+              <div class='wrapper-dropdown-1' id='dd' tabindex='1'>
+                <span>From</span>
+                <ul class='dropdown' tabindex='1'>
+                  <li>
+                    <a href='#'>2015</a>
+                  </li>
+                  <li>
+                    <a href='#'>2014</a>
+                  </li>
+                  <li>
+                    <a href='#'>2013</a>
+                  </li>
+                  <li>
+                    <a href='#'>2012</a>
+                  </li>
+                </ul>
+              </div>
+              <div class='wrapper-dropdown-1' id='dd2' tabindex='2'>
+                <span>To</span>
+                <ul class='dropdown' tabindex='2'>
+                  <li>
+                    <a href='#'>2015</a>
+                  </li>
+                  <li>
+                    <a href='#'>2014</a>
+                  </li>
+                  <li>
+                    <a href='#'>2013</a>
+                  </li>
+                  <li>
+                    <a href='#'>2012</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class='box-col-3-no-bg box-height'>
+              <h2>
+                Month
+              </h2>
+              <div class='wrapper-dropdown-1' id='dd3' tabindex='3'>
+                <span>From</span>
+                <ul class='dropdown' tabindex='3'>
+                  <li>
+                    <a href='#'>January</a>
+                  </li>
+                  <li>
+                    <a href='#'>February</a>
+                  </li>
+                  <li>
+                    <a href='#'>March</a>
+                  </li>
+                  <li>
+                    <a href='#'>April</a>
+                  </li>
+                  <li>
+                    <a href='#'>May</a>
+                  </li>
+                  <li>
+                    <a href='#'>June</a>
+                  </li>
+                  <li>
+                    <a href='#'>July</a>
+                  </li>
+                  <li>
+                    <a href='#'>August</a>
+                  </li>
+                  <li>
+                    <a href='#'>September</a>
+                  </li>
+                  <li>
+                    <a href='#'>October</a>
+                  </li>
+                  <li>
+                    <a href='#'>November</a>
+                  </li>
+                  <li>
+                    <a href='#'>December</a>
+                  </li>
+                </ul>
+              </div>
+              <div class='wrapper-dropdown-1' id='dd4' tabindex='4'>
+                <span>To</span>
+                <ul class='dropdown' tabindex='4'>
+                  <li>
+                    <a href='#'>January</a>
+                  </li>
+                  <li>
+                    <a href='#'>February</a>
+                  </li>
+                  <li>
+                    <a href='#'>March</a>
+                  </li>
+                  <li>
+                    <a href='#'>April</a>
+                  </li>
+                  <li>
+                    <a href='#'>May</a>
+                  </li>
+                  <li>
+                    <a href='#'>June</a>
+                  </li>
+                  <li>
+                    <a href='#'>July</a>
+                  </li>
+                  <li>
+                    <a href='#'>August</a>
+                  </li>
+                  <li>
+                    <a href='#'>September</a>
+                  </li>
+                  <li>
+                    <a href='#'>October</a>
+                  </li>
+                  <li>
+                    <a href='#'>November</a>
+                  </li>
+                  <li>
+                    <a href='#'>December</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class='box-col-3-no-bg box-height'>
+              <h2>
+                Words
+              </h2>
+              <form>
+                <fieldset>
+                  <input class='name' name='' type='text'>
+                  <label class='search' for='name'>Type words</label>
+                </fieldset>
+                <a class='search-btn' href='#'>Search</a>
+              </form>
             </div>
           </div>
         </div>
