--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
             </div>
           </div>
           <div class='card-body'>
+            <p>You can search by year, by month or by typing some words. You can use all three criteria at once or try your luck with only one criteria.</p>
             <div class='box-col-3-no-bg box-height'>
               <h2>
                 Year
