removes class for setting active nav on other buttons

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                   <input class='name' name='' type='text'>
                   <label class='search' for='name'>Type words</label>
                 </fieldset>
-                <a class='search-btn search-link' href='#search'>Search</a>
+                <a class='search-btn' href='#search'>Search</a>
               </form>
             </div>
           </div>
@@ -623,7 +623,7 @@
               </p>
             </div>
             <div class='card-action'>
-              <a class='our-team-link' href='#our-team'>More info</a>
+              <a href='#our-team'>More info</a>
             </div>
           </div>
           <div class='box-col-2'>
@@ -643,7 +643,7 @@
             <div class='card-action'>
               <ul>
                 <li>
-                  <a class='contact-link' href='#contact'>More info</a>
+                  <a href='#contact'>More info</a>
                 </li>
                 <li>
                   <a href='mailto:kickarts1@gmail.com'>
