simplyfies search form

--- a/index.html
+++ b/index.html
@@ -379,136 +379,9 @@
             </div>
           </div>
           <div class='card-body'>
-            <p class='search-dscrp'>You can search by year, by month or by typing some words. You can use all three criteria at once or try your luck with only one criteria.</p>
-            <div class='box-col-3-no-bg box-height'>
+            <div class='box-col-search-word box-height'>
               <h2>
-                Year
-              </h2>
-              <div class='wrapper-dropdown-1' id='dd' tabindex='1'>
-                <span>From</span>
-                <ul class='dropdown' tabindex='1'>
-                  <li>
-                    <a href='#'>2015</a>
-                  </li>
-                  <li>
-                    <a href='#'>2014</a>
-                  </li>
-                  <li>
-                    <a href='#'>2013</a>
-                  </li>
-                  <li>
-                    <a href='#'>2012</a>
-                  </li>
-                </ul>
-              </div>
-              <div class='wrapper-dropdown-1' id='dd2' tabindex='2'>
-                <span>To</span>
-                <ul class='dropdown' tabindex='2'>
-                  <li>
-                    <a href='#'>2015</a>
-                  </li>
-                  <li>
-                    <a href='#'>2014</a>
-                  </li>
-                  <li>
-                    <a href='#'>2013</a>
-                  </li>
-                  <li>
-                    <a href='#'>2012</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class='box-col-3-no-bg box-height'>
-              <h2>
-                Month
-              </h2>
-              <div class='wrapper-dropdown-1' id='dd3' tabindex='3'>
-                <span>From</span>
-                <ul class='dropdown' tabindex='3'>
-                  <li>
-                    <a href='#'>January</a>
-                  </li>
-                  <li>
-                    <a href='#'>February</a>
-                  </li>
-                  <li>
-                    <a href='#'>March</a>
-                  </li>
-                  <li>
-                    <a href='#'>April</a>
-                  </li>
-                  <li>
-                    <a href='#'>May</a>
-                  </li>
-                  <li>
-                    <a href='#'>June</a>
-                  </li>
-                  <li>
-                    <a href='#'>July</a>
-                  </li>
-                  <li>
-                    <a href='#'>August</a>
-                  </li>
-                  <li>
-                    <a href='#'>September</a>
-                  </li>
-                  <li>
-                    <a href='#'>October</a>
-                  </li>
-                  <li>
-                    <a href='#'>November</a>
-                  </li>
-                  <li>
-                    <a href='#'>December</a>
-                  </li>
-                </ul>
-              </div>
-              <div class='wrapper-dropdown-1' id='dd4' tabindex='4'>
-                <span>To</span>
-                <ul class='dropdown' tabindex='4'>
-                  <li>
-                    <a href='#'>January</a>
-                  </li>
-                  <li>
-                    <a href='#'>February</a>
-                  </li>
-                  <li>
-                    <a href='#'>March</a>
-                  </li>
-                  <li>
-                    <a href='#'>April</a>
-                  </li>
-                  <li>
-                    <a href='#'>May</a>
-                  </li>
-                  <li>
-                    <a href='#'>June</a>
-                  </li>
-                  <li>
-                    <a href='#'>July</a>
-                  </li>
-                  <li>
-                    <a href='#'>August</a>
-                  </li>
-                  <li>
-                    <a href='#'>September</a>
-                  </li>
-                  <li>
-                    <a href='#'>October</a>
-                  </li>
-                  <li>
-                    <a href='#'>November</a>
-                  </li>
-                  <li>
-                    <a href='#'>December</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class='box-col-3-no-bg box-height'>
-              <h2>
-                Words
+                Search by Words
               </h2>
               <form>
                 <fieldset>
@@ -517,6 +390,37 @@
                 </fieldset>
                 <a class='search-btn' href='#'>Search</a>
               </form>
+            </div>
+            <div class='box-col-search-or box-height'>
+              <h2 class='or-box'>
+                OR
+              </h2>
+            </div>
+            <div class='box-col-search-year box-height'>
+              <h2>
+                List by Year
+              </h2>
+              <div class='wrapper-dropdown-1' id='dd' tabindex='1'>
+                <span>Select a year</span>
+                <ul class='dropdown' tabindex='1'>
+                  <li>
+                    <a href='#'>All years</a>
+                  </li>
+                  <li>
+                    <a href='#'>2015</a>
+                  </li>
+                  <li>
+                    <a href='#'>2014</a>
+                  </li>
+                  <li>
+                    <a href='#'>2013</a>
+                  </li>
+                  <li>
+                    <a href='#'>2012</a>
+                  </li>
+                </ul>
+              </div>
+              <a class='search-btn list-btn' href='#'>List</a>
             </div>
           </div>
         </div>
