adds search icon in episodes box

--- a/index.html
+++ b/index.html
@@ -114,10 +114,22 @@
               </div>
             </div>
             <div class='card-body box-height'>
-              <p>If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.</p>
+              <p>If you have missed an episode don't worry. Down here you can check out our last three episodes or if you feel like to listen to some vintage episodes just load more or go to our search box.</p>
             </div>
             <div class='card-action'>
-              <a href='#episodes'>Browse episodes</a>
+              <ul>
+                <li>
+                  <a href='#episodes'>Browse episodes</a>
+                </li>
+                <li>
+                  |
+                </li>
+                <li>
+                  <a href='#search'>
+                    <div class='fa fa-search'></div>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
