adds routing for list-view

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
           </div>
         </div>
       </header>
-      <div id='episodes-list'>
+      <div id='episodes-list-section'>
+        <div id='episodes-list'></div>
         <episode-list></episode-list>
       </div>
       <div id='episodes-section'>
