text search finished

--- a/index.html
+++ b/index.html
@@ -386,61 +386,7 @@
       </div>
       <div id='search-section'>
         <div id='search'></div>
-        <div class='box box-padding-5'>
-          <div class='card-title purple'>
-            <h3>
-              Search
-            </h3>
-            <div class='card-icon'>
-              <div class='fa fa-search'></div>
-            </div>
-          </div>
-          <div class='card-body'>
-            <div class='box-col-search-word box-height'>
-              <h2>
-                Search by Words
-              </h2>
-              <form>
-                <fieldset>
-                  <input class='name' name='' type='text'>
-                  <label class='search' for='name'>Type words</label>
-                </fieldset>
-                <a class='search-btn' href='#'>Search</a>
-              </form>
-            </div>
-            <div class='box-col-search-or box-height'>
-              <h2 class='or-box'>
-                OR
-              </h2>
-            </div>
-            <div class='box-col-search-year box-height'>
-              <h2>
-                List by Year
-              </h2>
-              <div class='wrapper-dropdown-1' id='dd' tabindex='1'>
-                <span>Select a year</span>
-                <ul class='dropdown' tabindex='1'>
-                  <li>
-                    <a href='#'>All years</a>
-                  </li>
-                  <li>
-                    <a href='#'>2015</a>
-                  </li>
-                  <li>
-                    <a href='#'>2014</a>
-                  </li>
-                  <li>
-                    <a href='#'>2013</a>
-                  </li>
-                  <li>
-                    <a href='#'>2012</a>
-                  </li>
-                </ul>
-              </div>
-              <a class='search-btn list-btn' href='#'>List</a>
-            </div>
-          </div>
-        </div>
+        <search></search>
       </div>
       <div id='contact-section'>
         <div id='contact'></div>
@@ -616,6 +562,7 @@
   <script src='raw.tag' type='riot/tag'></script>
   <script src='episode.tag' type='riot/tag'></script>
   <script src='episode-list.tag' type='riot/tag'></script>
+  <script src='search.tag' type='riot/tag'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js'></script>
   <script src='js/router.js'></script>
   <script>
