adds alt information to images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href='#home'>
             <h1>
               <div class='nav-logo'>
-                <img alt='' src='img/kickarts-logo-new-icon.png'>
+                <img alt='KickArts Logo Icon' src='img/kickarts-logo-new-icon.png'>
               </div>
               <div class='nav-title'><span style='font-weight: 400'>KICK</span>ARTS<span style='font-weight: 400'>.org.nz</span></div>
             </h1>
@@ -152,7 +152,7 @@
               </h3>
               <p class='team-description'>Host, Producer &amp; Reviewer</p>
               <div class='card-img'>
-                <img alt='' src='img/richard.jpg'>
+                <img alt='Richard Green' src='img/richard.jpg'>
               </div>
             </div>
             <div class='card-body box-height'>
@@ -191,7 +191,7 @@
               </h3>
               <p class='team-description'>Co-Host, Co-Producer &amp; Reviewer</p>
               <div class='card-img'>
-                <img alt='' src='img/enny.jpg'>
+                <img alt='Enny Benzonelli' src='img/enny.jpg'>
               </div>
             </div>
             <div class='card-body box-height'>
@@ -242,7 +242,7 @@
               </h3>
               <p class='team-description'>Books &amp; Theatre Reviewer</p>
               <div class='card-img'>
-                <img alt='' src='img/paula.jpg'>
+                <img alt='Paula Crimmens' src='img/paula.jpg'>
               </div>
             </div>
             <div class='card-body box-height'>
@@ -278,7 +278,7 @@
               </h3>
               <p class='team-description'>Theatre Reviewer</p>
               <div class='card-img'>
-                <img alt='' src='img/carolynn.jpg'>
+                <img alt='Carolynn Day' src='img/carolynn.jpg'>
               </div>
             </div>
             <div class='card-body box-height'>
@@ -309,7 +309,7 @@
               </h3>
               <p class='team-description'>Movies &amp; Theatre Reviewer</p>
               <div class='card-img'>
-                <img alt='' src='img/adam.jpg'>
+                <img alt='Adam Fresco' src='img/adam.jpg'>
               </div>
             </div>
             <div class='card-body box-height'>
@@ -348,7 +348,7 @@
               </h3>
               <p class='team-description'>Theatre Reviewer</p>
               <div class='card-img'>
-                <img alt='' src='img/catherine.jpg'>
+                <img alt='Catherine George' src='img/catherine.jpg'>
               </div>
             </div>
             <div class='card-body box-height'>
