--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+    <meta content="KickArts | Auckland's Comprehensive ArtShow" name='description'>
     <title>KickArts | Auckland's Comprehensive ArtShow</title>
     <link href='css/reset.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
