removes inline style on nav title

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <div class='nav-logo'>
                 <img alt='KickArts Logo Icon' src='img/kickarts-logo-new-icon.png'>
               </div>
-              <div class='nav-title'><span style='font-weight: 400'>KICK</span>ARTS<span style='font-weight: 400'>.org.nz</span></div>
+              <div class='nav-title'><span class='title-thin'>KICK</span>ARTS<span class='title-thin'>.org.nz</span></div>
             </h1>
           </a>
           <span class='menu-button menu-open'></span>
