fixes defiant script for search for mobile and safari

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link href='css/main.css' rel='stylesheet'>
     <link href='img/favicon.png' rel='icon'>
     <link href='img/apple-touch-icon-precomposed.png' rel='apple-touch-icon-precomposed'>
-    <script src='js/min/modernizr.js'></script>
     <script src='js/min/jquery-1.11.3.min.js'></script>
+    <script src='js/min/modernizr.js'></script>
+    <script src='js/min/defiant.js'></script>
     <script src='js/min/match-height.js' type='text/javascript'></script>
     <script src='js/min/app-min.js'></script>
   </head>
@@ -559,7 +560,6 @@
       </footer>
     </div>
   </body>
-  <script src='js/min/defiance.js'></script>
   <script src='raw.tag' type='riot/tag'></script>
   <script src='episode.tag' type='riot/tag'></script>
   <script src='episode-list.tag' type='riot/tag'></script>
