adds banner for highest rating show

--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
       <header id='home'>
         <h1 class='logo'>
           <img alt='' src='img/kickarts-logo-new-icon.png'>
-          <div class='logo-title'><span class='thin'>KICK</span><span class='bold'>ARTS</span>
+          <div class='logo-title'>
+            <p class='banner'>
+              <span class='banner-highest-rating'>Planet FM's #2 highest rating show</span>
+            </p>
+            <p class='main-title'><span class='thin'>KICK</span><span class='bold'>ARTS</span>
+            </p>
             <p class='subtitle'>
               Auckland's Comprehensive ArtShow.
             </p>
