--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <h1 class='logo'>
           <img alt='' src='img/kickarts-logo-new-icon.png'>
           <div class='logo-title'>
-            <p class='banner'>
-              <span class='banner-highest-rating'>Planet FM's #2 highest rating show</span>
+            <p class='banner-highest-rating'>
+              <span>Planet FM's #2 highest rating show</span>
             </p>
             <p class='main-title'><span class='thin'>KICK</span><span class='bold'>ARTS</span>
             </p>
